--- a/sources/client/styles/layout.scss
+++ b/sources/client/styles/layout.scss
@@ -31,7 +31,7 @@ $waveHeight: 30px;
 			top: 0px;
 			width: 100vw;
 			height: $headerSize + $waveHeight;
-			background: url('../img/header.jpeg') repeat-y center;
+			background: url('../img/header.webp') repeat-y center;
 			background-size: cover;
 			
 			transform: translateZ(-6px) scale(1.75);
@@ -45,7 +45,7 @@ $waveHeight: 30px;
 				top: 0px;
 				width: 100vw;
 				height: 100%;
-				background: linear-gradient(#5e00d1cc 0%, #EC407Aa0 60%, #FF8A65 100%);
+				background: linear-gradient(#5e00d1e0 0%, #EC407Ae0 60%, #FF8A65 100%);
 			}
 		}
 		
@@ -74,26 +74,48 @@ $waveHeight: 30px;
 			position: relative;
 			width: 100vw;
 			
-			& > .sun {
+			& > .sun-parallax {
 				display: block;
 				position: absolute;
-				z-index: 1;
+				z-index: 4;
 				left: 0px;
 				right: 0px;
 				top: 0px;
 				bottom: 0px;
 				margin: auto;
 				
+				transform: translateZ(-8px) scale(2.5);
+				transform-origin: 50% -50%;
+				
 				width: $sunSize;
 				height: $sunSize;
 				
-				background: linear-gradient(#FFCCBC, #FFCC80);
-				border-radius: $sunSize;
-				box-shadow: 0px 0px 40px 1px #FFCCBC;
-				//mix-blend-mode: hard-light;
+				& > .sun-halo {
+					position: absolute;
+					left: 0px;
+					top: 0px;
+					
+					z-index: -1;
+					
+					//transform: scale(1.2);
+					opacity: 0.15;
+					
+					width: $sunSize;
+					height: $sunSize;
+					border-radius: $sunSize;
+					
+					background: linear-gradient(#FFCCBC, #FFCC80);
+				}
 				
-				transform: translateZ(-8px) scale(2.5);
-				transform-origin: 50% -50%;
+				& > .sun {
+					width: $sunSize;
+					height: $sunSize;
+					
+					background: linear-gradient(#FFCCBC, #FFCC80);//#FFCCBC, #FFCC80
+					border-radius: $sunSize;
+					box-shadow: 0px 0px 40px 1px #FFCCBC;
+					z-index: 2;
+				}
 			}
 			
 			& > .sun-shine-bottom {
