--- a/sources/client/styles/global.scss
+++ b/sources/client/styles/global.scss
@@ -1,1 +1,8 @@
 $palette: #AB47BC;
+$footerColor: #3F51B5;
+
+$headerSize: 400px;
+$sunSize: 200px;
+$waveHeight: 30px;
+
+$fadeFunc: 1.5s cubic-bezier(.36,.07,.19,.97) forwards;
