some style changes

--- a/sources/client/styles/global.scss
+++ b/sources/client/styles/global.scss
@@ -1,5 +1,6 @@
 $palette: #AB47BC;
-$footerColor: #303F9F;
+$footerColor1: #303F9F;
+$footerColor2: #6637c3;
 
 $headerSize: 400px;
 $sunSize: 200px;
