--- a/sources/client/styles/footer.scss
+++ b/sources/client/styles/footer.scss
@@ -2,10 +2,17 @@
 
 $moonSize: 124px;
 
+.footer-top {
+	height: 5px;
+	//backgroundColor: '#283593'
+	$darken_factor: 10;
+	background: linear-gradient(90deg, darken($footerColor1, $darken_factor), darken($footerColor2, $darken_factor));
+}
+
 .footer-content {
-	background-color: $footerColor;
-	//min-height: 200px;
-	//position: relative;
+	//background-color: $footerColor;
+	background: linear-gradient(60deg, $footerColor1, $footerColor2);
+	
 	display: grid;
 	grid-template-columns: fit-content(100%) auto;
 	grid-template-rows: auto fit-content(100%);
@@ -22,11 +29,12 @@ $moonSize: 124px;
 		justify-content: stretch;
 		
 		.discord-widget h3 {
+			min-width: auto !important;
 			width: 100%;
 		}
 		
 		.copyright {
-			background-color: #3949AB;
+			background-color: #4527A0;
 		}
 	}
 	
@@ -51,16 +59,19 @@ $moonSize: 124px;
 		height: 100%;
 		min-height: 247px;
 		
+		box-shadow: 0px 0px 15px #0003;
+		
 		h3 {
 			color: #fff;
-			background-color: #283593;
+			//background-color: #4527A080;
+			background: linear-gradient(90deg, #4527A000 0%, #4527A080 100%);
 			margin: 0px;
 			padding: 0px 10px;
 			height: 30px;
 			line-height: 30px;
 			
 			min-width: 400px;
-			max-width: 100vw;
+			max-width: 100%;
 		}
 		
 		position: relative;
@@ -113,6 +124,12 @@ $moonSize: 124px;
 					}
 				}
 			}
+			
+			@media (max-width: 450px) {
+				table tr td:nth-child(3) {
+					display: none;
+				}
+			}
 		}
 	}
 	
@@ -131,7 +148,7 @@ $moonSize: 124px;
 		&::before {
 			content: attr(data-text);
 			display: block;
-			color: $footerColor;
+			color: $footerColor1;
 			opacity: 0;
 			font-size: 18px;
 			font-weight: bold;
