--- a/sources/client/styles/home.scss
+++ b/sources/client/styles/home.scss
@@ -8,72 +8,121 @@
 		justify-content: center;
 		align-items: center;
 		
-		& > button, & > a {
-			background-color: transparent;
-			box-shadow: none;
-			padding: 10px 0px;
-			border-radius: 0px;
-			//border: 3px solid #fff0;
-			border: none;
-			//transition: background-color $anim, border-color $anim;
+		& > * {
+			box-sizing: border-box;
 			
-			&::after {
+			width: 200px;
+			height: 70px;
+			line-height: 70px;
+			
+			font-size: 22px;
+			font-weight: bold;
+			padding: 0px;
+			margin: 20px;
+			box-shadow: 0px 3px 5px #0004, inset 0px 0px 15px #4a7dda40;
+			color: #fff;
+			border: 1px solid #4a7dda20;
+			border-radius: 3px;
+			
+			$blur: 40%;
+			background: linear-gradient(161deg, #fff4 #{50% - $blur}, #fff1 #{50% + $blur});//180-19 deg
+			
+			overflow: hidden;
+			position: relative;
+			
+			&::before {//lighten background effect
 				content: "";
-				display: block;
-				width: 0%;
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				background-color: #fff;
+				opacity: 0;
+				transition: opacity 0.5s ease-in-out;
+			}
+			
+			&::after {//flash effect
+				content: "";
+				position: absolute;
+				left: 0;
+				right: 0;
+				top: 0;
+				bottom: 0;
 				margin: auto;
-				height: 4px;
-				border-radius: 4px;
-				background-color: #fff5;
-				//box-shadow: 0px 1px 3px #fff4;
+				width: 170px;
+				height: 182px * 2;//more that sqrt( height*height + width*width )
+				background: linear-gradient(90deg, #fff0 0%, #fff4 50%, #fff0 100%);
+				transform: translate(-60%, -60%) rotate(71deg);//90 - 19 deg
 				
-				transition: width $anim;
+				transition: transform 0.66s ease-out;
 			}
 			
 			&:hover {
-				box-shadow: none;
-				background-color: #fff0;
-				border-color: #fff0;
-				
+				color: #fff;
 				&::after {
-					width: 100%;
+					transform: translate(100%, 100%) rotate(71deg);
 				}
 				
-				.water-text {
-					background-color: #01579B60;
+				&::before {
+					opacity: 0.2;
+				}
+				
+				& > .top { transform: translateX(100%); }
+				& > .left { transform: translateY(100%); }
+				& > .bottom { transform: translateX(100%); }
+				& > .right { transform: translateY(100%); }
+				
+				& > .left, & > .right, & > .top, & > .bottom {
+					transition: transform 0.44s ease-out;
+					background-color: #FFAB91;
+				}
+				& > .bottom, & > .right {
+					transition-delay: 0.22s;
 				}
 			}
-		}
-	}
-	
-	.water-text { //button
-		font-family: UnderwaterLove, RobotoRegular, Arial, serif;
-		font-size: 50px;
-		font-weight: normal;
-		//background: linear-gradient(#EC407A80 0%, #FFCCBCA0 100%);
-		//background: linear-gradient(#406DEC80 0%, #BCD7FFA0 100%);
-		background-color: #01579B20;
-		-webkit-background-clip: text;
-		background-clip: text;
-		color: transparent;
-		-webkit-text-fill-color: transparent;
-		padding: 20px 40px;
-		position: relative;
-		//text-shadow: 0px 0px 5px #64B5F640;
-		text-shadow: none;
-		box-shadow: none;
-		
-		transition: background-color $anim;
-		
-		&::after {
-			padding: 20px 40px;
-			background: none;
-			content: attr(data-text);
-			left: 0;
-			position: absolute;
-			text-shadow: 0px -2px 0px #FFF8;
-			top: 0;
-			z-index: -1;
+			
+			$shineSize: 1px;
+			
+			& > .left, & > .right, & > .top, & > .bottom {
+				position: absolute;
+				background-color: #fff;
+				transition: transform 0.44s ease-out;
+			}
+			
+			& > .left, & > .right {
+				width: $shineSize;
+				height: 100%;
+				transform: translateY(-100%);
+			}
+			
+			& > .top, & > .bottom {
+				width: 100%;
+				height: $shineSize;
+				transform: translateX(-100%);
+			}
+			
+			& > .top {
+				left: 0;
+				top: 0;
+				transition-delay: 0.22s;
+			}
+			& > .left {
+				left: 0;
+				top: 0;
+				transition-delay: 0.22s;
+			}
+			
+			& > .bottom {
+				left: 0;
+				bottom: 0;
+				transition-delay: 0s;
+			}
+			& > .right {
+				right: 0;
+				top: 0;
+				transition-delay: 0s;
+			}
 		}
 	}
 }
