--- a/sources/client/styles/animations.scss
+++ b/sources/client/styles/animations.scss
@@ -20,3 +20,14 @@
 		transform: translateY(0%);
 	}
 }
+
+@keyframes pop-in {
+	0% {
+		opacity: 0;
+		transform: scale(0.5);
+	}
+	100% {
+		opacity: 1;
+		transform: scale(1);
+	}
+}
